--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
                         an altruism-based gameplay mechanic</li>
                     <li><a href="https://github.com/Blanwhit/Waffle-Solver">Waffle Game Solver</a> - Fast automated
                         terminal-based solution finder for <a href="https://wafflgame.net">The Waffle Game</a></li>
-                    <li><a href="https://blanwhit.github.io/Tic-Tac-Toe/">Browser-based Tic-Tac-Toe</a> - An interactive
-                        algorithm</li>
+                    <li><a href="https://blanwhit.github.io/Tic-Tac-Toe/">Browser-based Tic-Tac-Toe</a> - An algorithmic
+                        approach</li>
                 </ul>
             </div>
         </div>
