--- a/index.html
+++ b/index.html
@@ -163,10 +163,9 @@
                     </li>
                     <li>
                         Two-time qualifier (2024, 2025), American Invitational Mathematical Exam (AIME)
-                        <br>- One of only 6000 grade 9-12 students worldwide to qualify
                     </li>
                     <li>
-                        Two-time KML Gold Medalist (Senior 2024, Junior 2023)
+                        Two-time Kingston Math League (KML) Gold Medalist (Senior 2024, Junior 2023)
                     </li>
                     <li>
                         QSLMA Grade 9 Gold Medalist (2024)
