--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <title>Vadym Shvydun</title>
+    <link rel="icon" type="image/x-icon" href="https://api.iconify.design/f7/book-fill.svg?color=%23f1c40f">
     <link rel="stylesheet" href="style.css">
 </head>
 
