--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Vadym Shvydun</title>
-    <link rel="icon" type="image/x-icon" href="https://api.iconify.design/f7/book-fill.svg?color=%23f1c40f">
+    <link rel="icon" type="image/x-icon" id="favicon">
+    <script>
+        document.getElementById( 'favicon' ).href = "https://api.iconify.design/f7/book-fill.svg?color=%23f1c40f";
+    </script>
     <link rel="stylesheet" href="style.css">
 </head>
 
