More fixes, change default favicon to red

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Vadym Shvydun</title>
     <link rel="icon" type="image/x-icon" id="favicon">
     <script>
-        document.getElementById( 'favicon' ).href = "https://api.iconify.design/f7/book-fill.svg?color=%23f1c40f";
+        document.getElementById( 'favicon' ).href = "https://api.iconify.design/f7/book-fill.svg?color=%e74c3c";
     </script>
     <link rel="stylesheet" href="style.css">
 </head>
