--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <div class="header-container">
         <div class="name">Vadym Shvydun</div>
         <div class="contact">
-            <a href="mailto:vadim.shvydun@gmail.com">vadim.shvydun@gmail.com</a> | Kingston, Ontario<br>
-            Grade 10 IB Student, Regiopolis-Notre Dame C.H.S. <br>
-            Born April 10th, 2009
+            <a href="mailto:vadim.shvydun@gmail.com">vadim.shvydun@gmail.com</a> | Grade 10 IB Student, Regiopolis-Notre
+            Dame C.H.S.<br>
+            Born April 10th, 2009 in Kyiv, Ukraine | Currently residing in Kingston, Ontario
         </div>
     </div>
 
