Increase toggle hitboxes and change some things for mobile

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     <div class="header-container">
         <div class="name">Vadym Shvydun</div>
         <div class="contact">
-            <a href="mailto:vadim.shvydun@gmail.com">vadim.shvydun@gmail.com</a> | Grade 10 IB Student, Regiopolis-Notre
+            <a href="mailto:vadim.shvydun@gmail.com">vadim.shvydun@gmail.com</a><span class=separator> | </span><br
+                class="responsive">Grade 10 IB Student, Regiopolis-Notre
             Dame C.H.S.<br>
-            Born April 10th, 2009 in Kyiv, Ukraine | Currently residing in Kingston, Ontario
+            Born April 10th, 2009 in Kyiv, Ukraine<span class=separator> | </span><br class="responsive">Currently
+            residing in Kingston, Ontario
         </div>
     </div>
 
