Added uOttawa tournament

--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
                         <a href="https://qslma.oame.on.ca/math-competitions">QSLMA</a> Grade 9 Gold Medalist (2024)
                     </li>
                     <li>
+                        <a href="https://www.uottawa.ca/faculty-science/mathematics-statistics/outreach-programs">University
+                            of Ottawa Math Horizons</a>
+                        Silver Medalist (2025)
+                    </li>
+                    <li>
                         Gold Medalist - <a href="">3rd
                             Stage of Ukrainian National Mathematics Olympiad</a> (<a
                             href="https://docs.google.com/spreadsheets/d/1KdKLTuxa0pDIVmcTeiBjsj5u1wa3PR-w/edit?gid=1180246867#gid=1180246867">2023</a>)
