--- a/index.html
+++ b/index.html
@@ -95,8 +95,13 @@
                             Invitational Mathematical Exam (AIME)</a>
                     </li>
                     <li>
-                        Two-time <a href="https://juniormathleague.com/company">Kingston Math League (KML)</a> Gold
-                        Medalist (Senior 2024, Junior 2023)
+                        Three-time <a href="https://juniormathleague.com/company">Kingston Math League (KML)</a>
+                        Individual Gold
+                        Medalist (Junior 2024, Senior 2024, Junior 2025)
+                    </li>
+                    <li>
+                        <a href="https://juniormathleague.com/company">Kingston Math League (KML)</a> - Three-time Team
+                        Medalist (Gold - Junior 2025; Silver - Junior 2024, Senior 2024)
                     </li>
                     <li>
                         <a href="https://qslma.oame.on.ca/math-competitions">QSLMA</a> Grade 9 Gold Medalist (2024)
@@ -128,6 +133,9 @@
                     </li>
                     <li>
                         Silver Medalist, Kingston Annual Chess Tournament - Grade 9 Division (2024)
+                    </li>
+                    <li>
+                        Winner - Regiopolis-Notre Dame C.H.S. vs Holy Cross C.H.S. Debate (May 2025)
                     </li>
                 </ul>
             </div>
@@ -206,7 +214,9 @@
                 <ul>
                     <li>Martial Arts Practitioner - Kung Fu, Karate, Jiu Jitsu; 8 years of previous experience in MMA
                     </li>
-                    <li>Ukrainian Folk Dancer for <a href="https://www.facebook.com/MakyKingston">MAKY</a></li>
+                    <li>Ukrainian Folk Dancer for <a href="https://www.facebook.com/MakyKingston">MAKY</a> - performed
+                        at Lviv Ukraine Folklore Festival Kingston (2024), MALANKA Kingston (2024), 39th Annual
+                        Brockville Multicultural Festival (2025)</li>
                     <li>Calisthenicist - can perform advanced static holds including the Human Flag and Front Lever</li>
                 </ul>
             </div>
