--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
                         Medalist (Gold - Junior 2025; Silver - Junior 2024, Senior 2024)
                     </li>
                     <li>
-                        <a href="https://qslma.oame.on.ca/math-competitions">QSLMA</a> Grade 9 Gold Medalist (2024)
+                        <a href="https://qslma.oame.on.ca/math-competitions">QSLMA</a> Grade 9 Gold Medalist (2024),
+                        Grade 10 Gold Medalist (2025)
                     </li>
                     <li>
                         <a href="https://www.uottawa.ca/faculty-science/mathematics-statistics/outreach-programs">University
