--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         Medalist (Junior 2024, Senior 2024, Junior 2025)
                     </li>
                     <li>
-                        <a href="https://juniormathleague.com/company">Kingston Math League (KML)</a> - Three-time Team
+                        Three-time <a href="https://juniormathleague.com/company">Kingston Math League (KML)</a> Team
                         Medalist (Gold - Junior 2025; Silver - Junior 2024, Senior 2024)
                     </li>
                     <li>
