Add OSSLT and Portugese fest

--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
                     <li>
                         Winner - Regiopolis-Notre Dame C.H.S. vs Holy Cross C.H.S. Debate (May 2025)
                     </li>
+                    <li>
+                        OSSLT Perfect Score - only achieved by 2% of Canadian high school students (2025)
+                    </li>
                 </ul>
             </div>
         </div>
@@ -217,7 +220,7 @@
                     </li>
                     <li>Ukrainian Folk Dancer for <a href="https://www.facebook.com/MakyKingston">MAKY</a> - performed
                         at Lviv Ukraine Folklore Festival Kingston (2024), MALANKA Kingston (2024), 39th Annual
-                        Brockville Multicultural Festival (2025)</li>
+                        Brockville Multicultural Festival (2025), Portugal Day Folklore Festival (June 2025)</li>
                     <li>Calisthenicist - can perform advanced static holds including the Human Flag and Front Lever</li>
                 </ul>
             </div>
