--- a/index.html
+++ b/index.html
@@ -261,6 +261,11 @@
             <a href="https://www.reddit.com/user/Blanwhit/" target="_blank">
                 <i class="fab fa-reddit"></i>
                 <span class="social-text">Reddit</span>
+            </a>
+            <a href="https://www.instagram.com/vadymshvydun/" target="_blank">
+                <i class="fab fa-instagram"></i>
+                <span class="social-text">Instagram</span>
+            </a>
         </div>
     </div>
 </body>
