--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="name">Vadym Shvydun</div>
         <div class="contact">
             <a href="mailto:vadim.shvydun@gmail.com">vadim.shvydun@gmail.com</a><span class="separator"> | </span><br
-                class="responsive">Grade 10 IB Student, Regiopolis-Notre
+                class="responsive">Year 1 IB Student, Regiopolis-Notre
             Dame C.H.S.<br>
             Born April 10th, 2009 in Kyiv, Ukraine<span class="separator"> | </span><br class="responsive">Currently
             residing in Kingston, Ontario
