--- a/index.html
+++ b/index.html
@@ -104,13 +104,12 @@
                             Invitational Mathematical Exam (AIME)</a>
                     </li>
                     <li>
-                        Three-time <a href="https://juniormathleague.com/company">Kingston Math League (KML)</a>
-                        Individual Gold
-                        Medalist (Junior 2024, Senior 2024, Junior 2025)
+                        Four-time <a href="https://juniormathleague.com/company">Kingston Math League (KML)</a>
+                        Individual Gold Medalist (Junior 2024, Senior 2024, Junior 2025, Senior 2025)
                     </li>
                     <li>
-                        Three-time <a href="https://juniormathleague.com/company">Kingston Math League (KML)</a> Team
-                        Medalist (Gold - Junior 2025; Silver - Junior 2024, Senior 2024)
+                        Four-time <a href="https://juniormathleague.com/company">Kingston Math League (KML)</a> Team
+                        Medalist (Gold - Junior 2025; Silver - Junior 2024, Senior 2024, Senior 2025)
                     </li>
                     <li>
                         <a href="https://qslma.oame.on.ca/math-competitions">QSLMA</a> Grade 9 Gold Medalist (2024),
