add AIME and MALANKA

--- a/index.html
+++ b/index.html
@@ -99,9 +99,11 @@
                         <br>- One of only 3 students out of 5,000+ nationwide to achieve perfect scores
                     </li>
                     <li>
-                        Two-time qualifier (2024, 2025), <a
+                        Three-time qualifier (2024, 2025, 2026), <a
                             href="https://en.wikipedia.org/wiki/American_Invitational_Mathematics_Examination">American
                             Invitational Mathematical Exam (AIME)</a>
+                        <br>- Top 2.5% result of all students in North America for three consecutive years (every year
+                        of participation)
                     </li>
                     <li>
                         Four-time <a href="https://juniormathleague.com/company">Kingston Math League (KML)</a>
@@ -240,8 +242,8 @@
                         2nd degree Black Belt JRTKD
                     </li>
                     <li>Ukrainian Folk Dancer for <a href="https://www.facebook.com/MakyKingston">MAKY</a> - performed
-                        at Lviv Ukraine Folklore Festival Kingston (2024, 2025), MALANKA Kingston (2024), 39th Annual
-                        Brockville Multicultural Festival (2025), Portugal Day Folklore Festival (June 2025)</li>
+                        at Lviv Ukraine Folklore Festival Kingston (2024, 2025), MALANKA Kingston (2025, 2026), 39th
+                        Annual Brockville Multicultural Festival (2025), Portugal Day Folklore Festival (June 2025)</li>
                     <li>Calisthenicist - can perform advanced static holds including the Human Flag and Back Lever</li>
                 </ul>
             </div>
