--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
                         "<a href="https://www.youtube.com/watch?v=ho9rZjlsyYY">Toccata and Fugue in D Minor</a>",
                         Marcin's "<a href="https://www.youtube.com/watch?v=V3CHbaFS3aQ">Classical Dragon</a>" and
                         Avenged Sevenfold's "<a href="https://www.youtube.com/watch?v=imwmmv9r1oE">Buried
-                            Alive</a>"</li>
-                    <br>- Some snippets of my guitar playing can be found <a
-                        href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE4MDgzMDMwNzA0OTU3OTgx?story_media_id=3742523368953244221&igsh=MWJ1dnJsZWFtY3NjcQ==">here</a>
-                    <li>
+                            Alive</a>"
+                        <br>- Some snippets of my guitar playing can be found <a
+                            href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE4MDgzMDMwNzA0OTU3OTgx?story_media_id=3742523368953244221&igsh=MWJ1dnJsZWFtY3NjcQ==">here</a>
+                    </li>
                     <li>3D Artist using Blender, Photoshop and World Creator - see <a
                             href="https://www.artstation.com/blanwhit">my Artstation profile</a> for my works
                     </li>
